--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <link rel="manifest" href="/manifest.json" />
-<meta name="theme-color" content="#0f172a" />
-
+    <meta name="theme-color" content="#0f172a" />
 </head>
 <body>
-    
+
+<!-- ✅ Chatbot Script -->
+<script
+  src="https://cdn.jotfor.ms/agent/embedjs/0197d4eaa0dc7e088d5f526a78f0ae136326/embed.js?skipWelcome=1&maximizable=1">
+</script>
+
 </body>
 </html>
