--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="manifest" href="/manifest.json" />
+    <meta name="google-site-verification" content="PPzM49mhHNqF1SJEv--glOqXPkgNjO4UP3ClmsuDnnQ" />
     <meta name="theme-color" content="#0f172a" />
 </head>
 <body>
