Add Google site verification meta tag
Added Google site verification meta tag for SEO.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="A modern blog platform for sharing ideas and insights" />
     <meta name="author" content="BlogCMS Team" />
 
+    <meta name="google-site-verification" content="PPzM49mhHNqF1SJEv--glOqXPkgNjO4UP3ClmsuDnnQ" />
+
     <meta property="og:title" content="BlogCMS - Modern Blog Platform" />
     <meta property="og:description" content="A modern blog platform for sharing ideas and insights" />
     <meta property="og:type" content="website" />
